--- a/Fizz Buzz Challenge.csproj
+++ b/Fizz Buzz Challenge.csproj
@@ -68,9 +68,12 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Code.html" />
+    <Content Include="img\apple-touch-icon.png" />
+    <Content Include="img\favicon.png" />
     <Content Include="Index.html" />
-    <Content Include="script.js" />
+    <Content Include="Scripts\script.js" />
     <Content Include="Solve.html" />
+    <Content Include="Styles\styles.css" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -85,6 +88,7 @@
       <DependentUpon>Web.config</DependentUpon>
     </None>
   </ItemGroup>
+  <ItemGroup />
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
